minor change in the click event

--- a/article_preview_component/style.css
+++ b/article_preview_component/style.css
@@ -87,7 +87,7 @@ img {
   position: absolute;
   top: -4rem;
   right: -5.55rem;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   border-radius: 10px;
