image path checked

--- a/fylo-data-storage-component-master/scss/_mobile.scss
+++ b/fylo-data-storage-component-master/scss/_mobile.scss
@@ -11,7 +11,7 @@
   .component {
     margin-top: 0;
     padding-top: 4rem;
-    background: url("/images/bg-mobile.png") center center/cover;
+    background: url("../../images/bg-mobile.png") center center/cover;
 
     &__block {
       margin-bottom: 1rem;
