--- a/fylo-data-storage-component-master/scss/style.scss
+++ b/fylo-data-storage-component-master/scss/style.scss
@@ -30,7 +30,7 @@ body {
 }
 
 .component {
-  background: url("/images/bg-desktop.png") no-repeat;
+  background: url("../../images/bg-desktop.png") no-repeat;
   background-position: 0% 75%;
   margin-top: 14rem;
   overflow: hidden;
